@@ -19,6 +19,13 @@ SET(OBDGPSLOGGER_MINOR_VERSION 11)
 ADD_DEFINITIONS("-DOBDGPSLOGGER_MAJOR_VERSION=${OBDGPSLOGGER_MAJOR_VERSION}")
 ADD_DEFINITIONS("-DOBDGPSLOGGER_MINOR_VERSION=${OBDGPSLOGGER_MINOR_VERSION}")
 
+# For now, assume the choices are "windows" or "posix"
+IF("${CMAKE_SYSTEM}" MATCHES "Windows")
+	ADD_DEFINITIONS(-DOBDPLATFORM_WINDOWS)
+ELSE("${CMAKE_SYSTEM}" MATCHES "Windows")
+	ADD_DEFINITIONS(-DOBDPLATFORM_POSIX)
+ENDIF("${CMAKE_SYSTEM}" MATCHES "Windows")
+
 # You probably don't want to change this
 SET(OBD_CONFIG_FILENAME ".obdgpslogger")
 
